--- a/src/pages/css/Music.css
+++ b/src/pages/css/Music.css
@@ -8,7 +8,7 @@
 }
 
 .band {
-  background: url("./img/band.png") no-repeat;
+  background: url("../../img/band.png") no-repeat;
   background-size: cover;
   height: 297px;
 }
